Add support for anonymous classes and diamond types
Introduces AnonymousClassDeclaration and TypeDiamond AST nodes, updates the parser to handle anonymous class declarations and diamond operator (<>), and refactors related AST structures. Also updates binary and unary expressions to use token objects for operators, and improves parsing of object creation, field access, and type references. Adjusts JavaTokenType and JavaLexer to clarify SLASH token naming and adds new shift operator tokens.