@@ -8,12 +8,12 @@ import dev.railroadide.railroad.ide.sst.ast.typeref.ClassOrInterfaceTypeRef;
 import org.jetbrains.annotations.NotNull;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
 public record SuperExpression(
-        Span span,
-        Optional<ClassOrInterfaceTypeRef> qualifier
+        Span span
 ) implements Expression {
     @Override
     public AstKind kind() {
@@ -22,9 +22,7 @@ public record SuperExpression(
 
     @Override
     public List<AstNode> children() {
-        List<AstNode> children = new ArrayList<>();
-        qualifier.ifPresent(children::add);
-        return List.copyOf(children);
+        return Collections.emptyList();
     }
 
     @Override
